--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@layer utilities {
+    .perspective-1000 {
+      perspective: 1000px;
+    }
+    .transform-style-preserve-3d {
+      transform-style: preserve-3d;
+    }
+    .backface-hidden {
+      backface-visibility: hidden;
+    }
+  }
 
 .custom-heading {
   color: #ffffff08;
   text-align: center;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.04);
   font-family: 'Montserrat', sans-serif;
-  font-size: clamp(6rem, 28dvw, 60rem);
+  font-size: clamp(6rem, 27dvw, 60rem);
   font-style: normal;
   font-weight: 600;
   line-height: 30px;
@@ -17,6 +27,19 @@
   position: absolute;
   z-index: 0;
 }
+.custom-heading2 {
+    color: #ffffff08;
+    text-align: center;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.04);
+    font-family: 'Montserrat', sans-serif;
+    font-size: clamp(6rem, 25dvw, 60rem);
+    font-style: normal;
+    font-weight: 600;
+    line-height: 30px;
+    letter-spacing: -10px;
+    position: absolute;
+    z-index: 0;
+  }
 @media (max-width: 721px) {
     .custom-heading {
         letter-spacing: -6px;
